# MalWhere

./: .gitignore  README.md  pyproject.toml
agent/: loop.py  model.py  prompt.py
api/: main.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Dropzone.jsx  Report.jsx  StepCard.jsx  TraceView.jsx  VerdictBadge.jsx
tests/: run_all_tests.py  test_db_cache.py  test_model.py  test_static_tools.py  test_threat_intel.py
tools/: db_cache.py  entropy.py  hash_lookup.py  imports.py  ml_score.py  pe_info.py  strings_extractor.py  threat_intel.py  visualize.py  yara_scan.py
