[project]
name = "ep-malwhere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pefile>=2024.8.26",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.49.0",
    "yara-python>=4.5.4",
]
